--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "website",
   "version": "0.0.0",
   "private": true,
+  "homepage": "https://codify-berkeley-education.github.io/",
   "scripts": {
+    "predeploy": "bun run build",
+    "deploy": "gh-pages -d build",
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "dev": "docusaurus start",
