--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,19 +8,15 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
-      - name: Set up Bun
+      
+      - name: Install bun
         run: |
           curl -fsSL https://bun.sh/install | bash
-          export BUN_INSTALL="$HOME/.bun"
-          export PATH="$BUN_INSTALL/bin:$PATH"
-
+          echo 'export PATH="$HOME/.bun/bin:$PATH"' >> $HOME/.bashrc
+          source $HOME/.bashrc
+      
       - name: Install dependencies
         run: bun install
-
-      - name: Run deploy
-        run: bun run deploy
