--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,17 +6,21 @@ on:
       - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      
-      - name: Install bun
-        run: |
-          curl -fsSL https://bun.sh/install | bash
-          echo 'export PATH="$HOME/.bun/bin:$PATH"' >> $HOME/.bashrc
-          source $HOME/.bashrc
-      
-      - name: Install dependencies
-        run: bun install
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Install Bun
+      run: |
+        curl -fsSL https://bun.sh/install | bash
+        echo 'export PATH="$HOME/.bun/bin:$PATH"' >> ~/.bashrc
+        source ~/.bashrc
+
+    - name: Verify Bun installation
+      run: bun --version
+
+    - name: Install dependencies
+      run: bun install
