--- a/package.json
+++ b/package.json
@@ -38,7 +38,11 @@
     "@docusaurus/types": "3.2.1",
     "prettier": "3.4.2",
     "typescript": "~5.2.2",
-    "unist-util-visit": "^5.0.0"
+    "unist-util-visit": "^5.0.0",
+    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0"
+
   },
   "browserslist": {
     "production": [
